week-4/day-3/yaml-practice/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: busybox
        name: busybox
        command: ['sh', '-c', 'while true; do wget -qO- http://backend-svc.backend.svc.cluster.local:80/; sleep 3; done;']
