week-4/day-3/yaml-practice/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    tier: backend
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
